# creative-Antigravity

./: .dockerignore  .gitignore  .npmrc  @AI_STATUS.md  ADR.md  ARCHITECTURE.md  GEMINI.md  MCP_SETUP_GUIDE.md  PROJECT_MAP.md  README.md  convert_csv_to_md.py  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  package.json  parse_report.py  pnpm-lock.yaml  run_backtest.ps1  run_backtest_short.ps1  turbo.json
.agent/: SKILLS_OVERVIEW.md  user_global_new.md
.husky/: pre-commit
analysis/: analyze_gotobi_days.py  analyze_gotobi_real.py  analyze_gotobi_reverse.py  analyze_legs.py  analyze_monday.py  analyze_optimized_sl_tp.py  analyze_v2_21.py  check_mar2024.py  debug_analysis.py  nakane_fast.py  nakane_optimizer.py  nakane_pandas.py  nakane_pandas_results.csv  nakane_pandas_results_jst.csv  nakane_pf_ideas.py  nakane_pf_ideas_results.csv  nakane_vectorized.py  parse_report.py  validate_winner.py
apps/auto-clipper-api/: Dockerfile  README.md  SPECIFICATION.md  database.py  main.py  package.json  pyproject.toml  pytest.ini  setup_env.ps1  setup_env.sh  tasks.py
apps/auto-clipper-api/tests/: conftest.py  test_database.py  test_main.py
apps/auto-clipper-api/utils/: digest_maker.py  downloader.py  event_bus.py  file_utils.py  llm_analyzer.py  metadata_generator.py  smart_cropper.py  thumbnail_generator.py  transcriber.py  tts_service.py  video_engine.py  youtube_client.py
apps/manga-downloader/: README.md  exe化手順.md  package.json  pyproject.toml  使い方.md  漫画ダウンローダー.bat
apps/market-watcher/: Dockerfile  README.md  SPECIFICATION.md  package.json  pyproject.toml  pytest.ini  setup_env.ps1
apps/market-watcher/src/: config.py  db_reader.py  main.py
apps/market-watcher/tests/: conftest.py  test_analyst.py  test_main.py
apps/quant-brain/: .env.example  Dockerfile  README.md  SPECIFICATION.md  monitor.html  package.json  pyproject.toml
apps/quant-brain/config/: best_params.json  momentum_params.json
apps/quant-brain/models/: lgbm_20251205_0448.pkl  lgbm_20251205_0530.pkl  lgbm_20251205_2323.pkl  lgbm_20251208_0004.pkl
apps/quant-brain/scripts/: backtest_momentum.py  download_historical_btc.py  optimize.py  optimize_momentum.py  run_backfill.py  train_model.py  walk_forward_validation.py
apps/quant-brain/src/: analysis.py  correlation.py  db.py  main.py
apps/quant-brain/src/ai/: trainer.py
apps/quant-brain/src/domain/: features.py  ghost_client.py  indicators.py  interfaces.py  risk_manager.py
apps/quant-brain/src/infrastructure/: backfiller.py  discord.py  indicator_service.py  onchain_client.py  recorder.py  scheduler.py
apps/quant-brain/src/strategies/: momentum_strategy.py
apps/quant-brain/tests/: __init__.py  test_trade_recording.py
docs/: AI_RULES.md  AI_STATUS.md  ARCHITECTURE.md  source_of_truth.yaml
mt5/: README.md  compile_mql5.ps1  convert_xml.py  force_deploy.ps1  parse_bs4.py  parse_mt5_xml.py  (+4 more)
(+457 files in other folders)
