[project]
name = "manga-downloader"
version = "0.1.0"
description = "Canvas Extractor for Manga Images"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "python-dateutil",
    "pytz",
    "tzdata",
    "yfinance",
    "curl_cffi",
    "multitasking",
    "protobuf",
    "websockets",
    "python-dotenv",
    "openai",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "playwright"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff"
]

[tool.ruff.lint]
# Legacy code configuration
ignore = ["E501", "E722", "SIM105"]
select = ["E", "F", "B", "SIM"]
