[project]
name = "market-watcher"
version = "0.1.0"
description = "Market Watcher Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "redis>=5.0.0",
    "ccxt>=4.1.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "websockets>=11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
