[project]
name = "quant-brain"
version = "2.0.0"
description = "Neural Alpha Engine - God Mode 2025"
authors = [
    { name = "Antigravity", email = "admin@antigravity.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "redis>=5.0.0",
    "polars>=0.19.0",
    "pyarrow>=13.0.0",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "ccxt>=4.0.0",
    "apscheduler>=3.10.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.280"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
